src/styles/scss/main.scss
/* ... */
.cta-support-wrapper .cta-support-content .cta-support-box {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 40px;
}

.cta-support-wrapper .cta-support-content .cta-support-box .theme-btn {
  background-color: $white;
  color: #6c57d2;
}
.cta-support-wrapper .cta-support-content .cta-support-box .theme-btn:hover {
  color: $white;
}
.cta-support-wrapper .cta-support-content .cta-support-box .theme-btn i {
  background-color: #6c57d2;
  color: $white;
}
.cta-support-wrapper .cta-support-content .cta-support-box .phone-box {
  display: flex;
  gap: 20px;
  align-items: center;
}
.cta-support-wrapper .cta-support-content .cta-support-box .phone-box .icon {
  width: 50px;
  height: 50px;
  line-height: 50px;
  background-color: #ff792e;
  text-align: center;
  border-radius: 50%;
}
.cta-support-wrapper
  .cta-support-content
  .cta-support-box
  .phone-box
  .content
  p {
  color: $white;
}
.cta-support-wrapper
  .cta-support-content
  .cta-support-box
  .phone-box
  .content
  h5 {
  color: $white;
}

.cta-wrapper-2 .cta-content .cta-card {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 40px;
}

.cta-wrapper-2 .cta-content .cta-card .phone-box {
  display: flex;
  gap: 20px;
  align-items: center;
}
.cta-wrapper-2 .cta-content .cta-card .phone-box .icon {
  width: 50px;
  height: 50px;
  line-height: 50px;
  background-color: $white;
  text-align: center;
  border-radius: 50%;
}
.cta-wrapper-2 .cta-content .cta-card .phone-box .icon i {
  color: #ff792e;
  font-size: 22px;
}
.cta-wrapper-2 .cta-right-image img {
  width: 100%;
  height: 100%;
}

.button-items {
  display: flex;
  align-items: center;
  gap: 40px;
  justify-content: center;
  margin-top: 40px;
}

.button-items .theme-btn {
  border-radius: 100px;
}
.button-items .theme-btn.style-bg {
  background-color: $white;
  color: $theme-color-2;
}
.button-items .theme-btn.style-bg i {
  background-color: $theme-color-2;
  color: $white;
}
.button-items .theme-btn::before,
.button-items .theme-btn::after {
  border-radius: 100px;
}
.button-items .theme-btn::before {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.button-items .theme-btn::after {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
.button-items .theme-btn i {
  border-radius: 100px;
}

.cta-value-wrapper-3 {
  border-radius: 34px;
  padding-left: 50px;
}

.cta-value-wrapper-3 .cta-value-content {
  max-width: 550px;
}

.cta-value-wrapper-3 .cta-value-content .text {
  color: $white;
  margin-top: 30px;
}
.cta-value-wrapper-3 .cta-value-content .theme-btn {
  border-radius: 100px;
  background-color: $theme-color-2;
  margin-top: 50px;
}
.cta-value-wrapper-3 .cta-value-content .theme-btn::before,
.cta-value-wrapper-3 .cta-value-content .theme-btn::after {
  border-radius: 100px;
}
.cta-value-wrapper-3 .cta-value-content .theme-btn::before {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.cta-value-wrapper-3 .cta-value-content .theme-btn::after {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
.cta-value-wrapper-3 .cta-value-content .theme-btn i {
  border-radius: 100px;
}

.cta-call-wrapper {
  position: relative;
}
.cta-call-wrapper.style-padding {
  margin-bottom: 120px;
}

.cta-call-wrapper .cta-button {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-top: 40px;
}

.cta-call-wrapper .cta-button .theme-btn {
  border-radius: 55px;
  background: #ff792e;
}
.cta-call-wrapper .cta-button .theme-btn i {
  border-radius: 50%;
  color: $theme-color-2;
}
.cta-call-wrapper .cta-button .theme-btn::before,
.cta-call-wrapper .cta-button .theme-btn::after {
  border-radius: 55px;
}
.cta-call-wrapper .cta-button .theme-btn::before {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.cta-call-wrapper .cta-button .theme-btn::after {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
.cta-call-wrapper .cta-button .theme-btn:hover i {
  background-color: $white;
  color: $theme-color-2;
}
.cta-call-wrapper .cta-button .pricing-text {
  color: $white;
  font-family: "DM Sans";
  font-size: 15px;
  display: inline-block;
  font-weight: 900;
}
.cta-call-wrapper .cta-button .pricing-text i {
  margin-left: 10px;
}
.cta-call-wrapper .carton-shape {
  position: absolute;
  bottom: -50px;
  right: 0;
}
.cta-call-wrapper .book-shape {
  position: absolute;
  top: 40%;
  left: 0;
}

.cta-support-bg-style {
  position: relative;
  z-index: 9;
}
.cta-support-bg-style::before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  content: "";
  background-color: transparent;
  z-index: -1;
  height: 50%;
}

.cta-section-4 {
  background-attachment: fixed;
}

.testimonial-box-items {
  margin-top: 30px;
}
.testimonial-box-items .testimonial-box {
  background-color: $white;
  border: 1px;
  border-color: rgba(0, 53, 102, 0.12);
  padding: 30px;
  border: 1px solid rgba(0, 53, 102, 0.12);
  border-radius: 14px;
}
.testimonial-box-items .testimonial-box .star-box-items {
  display: flex;
  justify-content: space-between;
}
.testimonial-box-items .testimonial-box .star-box-items .star {
  color: #f0bf11;
}
.testimonial-box-items .testimonial-box p {
  margin-top: 20px;
}
.testimonial-box-items .client-info {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-top: 30px;
}
.testimonial-box-items.style-2 .client-info {
  margin-top: 0;
  margin-bottom: 30px;
}

.testimonial-section-2 {
  position: relative;
  margin-top: 20px;
  background-attachment: fixed;
}

.testimonial-box-items-2 {
  border-radius: 0px 0px 5px 5px;
  background: #1c1c1c;
  padding: 70px;
  position: relative;
  border-top: 5px solid $theme-color-2;
  margin-top: -30px;
}

.testimonial-box-items-2 .star {
  color: #f0bf11;
  margin-top: 20px;
}
.testimonial-box-items-2 h4 {
  font-weight: 600;
  font-size: 28px;
  margin-top: 20px;
}
/* ... */

